<resources>
    <string name="app_name">qimobigmission Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_label">首页</string>
    <string name="college_label">学院</string>
    <string name="setting_label">设置</string>
    <string name="college_title1">经济信息工程学院</string>
    <string name="college_title2">通知公告</string>
    <string name="clii_source">阅读原文</string>
    <string name="main1">星期一</string>
    <string name="main2">星期二</string>
    <string name="main3">星期三</string>
    <string name="main4">星期四</string>
    <string name="main5">星期五</string>
    <string name="maintitle">课程表</string>
    <string name="my_app_name">西财事</string>
    <string name="title_activity_settings">Settings</string>
    <string name="class_time">课程星期:</string>
    <string name="class_step">课时长度:</string>
    <string name="class_index">第几节开始:</string>
    <string name="class_name">课程名称:</string>
    <string name="class_location">教室:</string>
    <string name="class_teacher">老师:</string>
    <string name="eidtclass_title">修改课程信息</string>
    <string name="class_be">上课时间：</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="addclass_title">添加课程</string>
    <string name="btn_add">添加课程</string>
    <string name="editclass_unchange">不可修改项：</string>
    <string name="editclass_change">可改项：</string>
    <string name="eidt">修改</string>
    <string name="setting_clearclass">清空课表</string>
    <string name="setting_outlineinfo">离线通知</string>
    <string name="setting_clearinfo">清空通知</string>
    <string name="outlineinfo">离线通知</string>
</resources>
