<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/main_fragment"
        android:name="com.example.lenovo.qimobigmissionapplication.MainFragment"
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="match_parent" />

    <fragment
        android:id="@+id/college_fragment"
        android:name="com.example.lenovo.qimobigmissionapplication.CollegeFragment"
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="match_parent" />

    <fragment
        android:id="@+id/setting_fragment"
        android:name="com.example.lenovo.qimobigmissionapplication.SettingFragment"
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/main_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_main"
                style="@style/btn_image"
                android:src="@drawable/ic_main" />

            <TextView
                android:id="@+id/tv_main"
                style="@style/btn_text"
                android:text="@string/main_label"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/college_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_college"
                style="@style/btn_image"
                android:src="@drawable/ic_college" />

            <TextView
                android:id="@+id/tv_college"
                style="@style/btn_text"
                android:text="@string/college_label"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_setting"
                style="@style/btn_image"
                android:src="@drawable/ic_setting" />

            <TextView
                android:id="@+id/tv_setting"
                style="@style/btn_text"
                android:text="@string/setting_label"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>